filter updates and start of search results page

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     }
   </script>-->
   
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbVCyIrFSyM0BumsIAl0jZb-pHf-59Gmk&sensor=false&libraries=places&region=US"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBbVCyIrFSyM0BumsIAl0jZb-pHf-59Gmk&libraries=places&region=US"></script>
 
   <link href="build/main.css" rel="stylesheet">
 
