add and test ionic storage

--- a/src/pages/pets/pets.html
+++ b/src/pages/pets/pets.html
@@ -13,7 +13,7 @@
         <p>
           {{ pet.tagLine }}
         </p>
-        <ion-icon name="heart" color="primary" (click)="favoritePet();"></ion-icon>
+        <ion-icon name="heart" color="primary" (click)="favoritePet(pet);"></ion-icon>
       </ion-card-content>
     </ion-card>
   </ion-list>
