server transfer state, ui and style updates

--- a/src/pages/favorite-pets/favorite-pets.html
+++ b/src/pages/favorite-pets/favorite-pets.html
@@ -31,7 +31,7 @@
       </ion-item>
 
       <ion-item-options side="left">
-        <button ion-button color="danger">
+        <button ion-button color="red">
           <ion-icon name="trash"></ion-icon>
           Delete
         </button>
