--- a/src/pages/breed-search/breed-search.html
+++ b/src/pages/breed-search/breed-search.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar>
     <ion-buttons start>
-      <button ion-button (click)="dismiss()">Close</button>
+      <button ion-button (tap)="dismiss()">Close</button>
     </ion-buttons>
     <ion-title class="test">Breed Search</ion-title>
   </ion-navbar>
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-list>
-    <ion-item *ngFor="let item of items" (click)="dismiss(item)">
+    <ion-item *ngFor="let item of items" (tap)="dismiss(item)">
       {{ item }}
     </ion-item>
   </ion-list>
