--- a/src/pages/favorite-pets/favorite-pets.html
+++ b/src/pages/favorite-pets/favorite-pets.html
@@ -8,7 +8,7 @@
     </ion-buttons>
     <ion-title>Pet Seek</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="goToRootPage()">
+      <button ion-button icon-only (tap)="goToRootPage()">
         <ion-icon name="search-outline"></ion-icon>
       </button>
     </ion-buttons>
@@ -31,7 +31,7 @@
       </ion-item>
 
       <ion-item-options side="left">
-        <button ion-button color="red">
+        <button ion-button color="red" (tap)="deleteFavoritePet(pet)">
           <ion-icon name="trash"></ion-icon>
           Delete
         </button>
