--- a/src/pages/breed-search/breed-search.html
+++ b/src/pages/breed-search/breed-search.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
   <ion-list>
-    <ion-item *ngFor="let item of items" (tap)="dismiss(item)">
+    <ion-item *ngFor="let item of items; trackBy: trackByFn" (tap)="dismiss(item)">
       {{ item }}
     </ion-item>
   </ion-list>
