--- a/src/pages/pet-detail/pet-detail.html
+++ b/src/pages/pet-detail/pet-detail.html
@@ -17,7 +17,7 @@
 </ion-header>
 
 <ion-content>
-  <ion-slides [pager]="pet.photos.length > 1 ? true : false">
+  <ion-slides *ngIf="pet.photos" [pager]="pet.photos.length > 1 ? true : false">
     <ion-slide *ngFor="let photo of pet?.photos; trackBy: trackByFn" class="pet-image">
       <ion-img class="pet-image" [ngStyle]="{'background-image': 'url(' + photo + ')'}"></ion-img>
     </ion-slide>
