--- a/src/pages/favorite-pets/favorite-pets.html
+++ b/src/pages/favorite-pets/favorite-pets.html
@@ -9,7 +9,7 @@
     <ion-title>Pet Seek</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (tap)="goToRootPage()">
-        <ion-icon name="search-outline"></ion-icon>
+        <ion-icon name="search"></ion-icon>
       </button>
     </ion-buttons>
   </ion-toolbar>
