--- a/src/pages/pet-list/pet-list.html
+++ b/src/pages/pet-list/pet-list.html
@@ -3,7 +3,7 @@
   <ion-toolbar color="primary" no-border-top>
     <ion-buttons start>
       <button ion-button icon-only navPop>
-        <ion-icon name="search-outline"></ion-icon>
+        <ion-icon name="search"></ion-icon>
       </button>
     </ion-buttons>
     <ion-title>Pet Seek</ion-title>
