--- a/src/pages/pet-list/pet-list.html
+++ b/src/pages/pet-list/pet-list.html
@@ -21,6 +21,7 @@
   <ion-list [virtualScroll]="pets" approxItemHeight="426px">
     <ion-card *virtualItem="let pet;">
       <ion-img class="pet-image" *ngIf="pet.photos" [ngStyle]="{'background-image': 'url(' + pet.photos[0] + ')'}" (tap)="showPetDetailPage(pet)"></ion-img>
+      <ion-img class="pet-image" *ngIf="!pet.photos" [ngStyle]="{'background-image': 'url(../../assets/imgs/placeholder.png)'}" (tap)="showPetDetailPage(pet)"></ion-img>
       <ion-card-content (tap)="showPetDetailPage(pet)">
         <ion-card-title>
           {{ pet.name }}
